@@ -1,3 +1,5 @@
+2017-04-10 Andrea Manzi  <andrea.manzi@cern.ch
+        * force stdlib version to be <= 4.15
 2017-02-15 Andrea Manzi  <andrea.manzi@cern.ch
         * added admin_dn and db_manage parameters
         * updated deps
